public class Subtraction extends BinaryOperator {
    @Override
    public int calculate(int left, int right) {
        return left - right;
    }
}
